--- a/index.html
+++ b/index.html
@@ -10,28 +10,82 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+
+    <link rel="stylesheet" href="style.css" />
+
     <title>Bento grid</title>
   </head>
   <body>
-    <div>
-      <p>Social Media 10x Faster with AI</p>
-      Over 4,000 5-star reviews
+    <div class="container">
+      <div>
+        <h1>Social Media 10x <span>Faster</span> with AI</h1>
+        <img
+          src="./assets/images/illustration-five-stars.webp"
+          alt="photo of 5 stars"
+        />
+        <p>Over 4,000 5-star reviews</p>
+      </div>
+
+      <div>
+        <img
+          src="./assets/images/illustration-multiple-platforms.webp"
+          alt="photo of instagram and twitter usernames"
+        />
+        <h3>Manage multiple accounts and platforms.</h3>
+      </div>
+
+      <div>
+        <h3>Maintain a consistent posting schedule.</h3>
+        <img
+          src="./assets/images/illustration-consistent-schedule.webp"
+          alt="illustration of calender"
+        />
+      </div>
+      <div>
+        <h3>Schedule to social media.</h3>
+        <img
+          src="./assets/images/illustration-schedule-posts.webp"
+          alt="illustration of schedule posts"
+        />
+        <p>
+          Optimize post timings to publish content at the perfect time for your
+          audience.
+        </p>
+      </div>
+
+      <div>
+        <img
+          src="./assets/images/illustration-grow-followers.webp"
+          alt="illustration of graphs to show followers growth"
+        />
+        <h2>Grow followers with non-stop content.</h2>
+      </div>
+
+      <div>
+        <h2>>56% faster audience growth</h2>
+        <img
+          src="./assets/images/illustration-audience-growth.webp"
+          alt="three emojis of user avatar"
+        />
+      </div>
+
+      <div>
+        <h2>Create and schedule content quicker.</h2>
+        <img
+          src="./assets/images/illustration-ai-content.webp"
+          alt="illustration to show ai content generation"
+        />
+      </div>
+
+      <div>
+        <h2>
+          <h2>Write your content using AI.</h2>
+          <img
+            src="./assets/images/illustration-create-post.webp"
+            alt="photo of a create post button with mouse cursor"
+          />
+        </h2>
+      </div>
     </div>
-    <div>Manage multiple accounts and platforms.</div>
-
-    <div>Maintain a consistent posting schedule.</div>
-    <div>
-      <p>Schedule to social media.</p>
-      Optimize post timings to publish content at the perfect time for your
-      audience.
-    </div>
-
-    <div>Grow followers with non-stop content.</div>
-
-    <div>>56% faster audience growth</div>
-
-    <div>Create and schedule content quicker.</div>
-
-    <div>Write your content using AI.</div>
   </body>
 </html>
