add the grid layout for the grid items

--- a/index.html
+++ b/index.html
@@ -17,74 +17,77 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <h1>Social Media 10x <span>Faster</span> with AI</h1>
-        <img
-          src="./assets/images/illustration-five-stars.webp"
-          alt="photo of 5 stars"
-        />
-        <p>Over 4,000 5-star reviews</p>
-      </div>
-
-      <div>
-        <img
-          src="./assets/images/illustration-multiple-platforms.webp"
-          alt="photo of instagram and twitter usernames"
-        />
-        <h3>Manage multiple accounts and platforms.</h3>
-      </div>
-
-      <div>
-        <h3>Maintain a consistent posting schedule.</h3>
-        <img
-          src="./assets/images/illustration-consistent-schedule.webp"
-          alt="illustration of calender"
-        />
-      </div>
-      <div>
-        <h3>Schedule to social media.</h3>
-        <img
-          src="./assets/images/illustration-schedule-posts.webp"
-          alt="illustration of schedule posts"
-        />
-        <p>
-          Optimize post timings to publish content at the perfect time for your
-          audience.
-        </p>
-      </div>
-
-      <div>
-        <img
-          src="./assets/images/illustration-grow-followers.webp"
-          alt="illustration of graphs to show followers growth"
-        />
-        <h2>Grow followers with non-stop content.</h2>
-      </div>
-
-      <div>
-        <h2>>56% faster audience growth</h2>
-        <img
-          src="./assets/images/illustration-audience-growth.webp"
-          alt="three emojis of user avatar"
-        />
-      </div>
-
-      <div>
-        <h2>Create and schedule content quicker.</h2>
-        <img
-          src="./assets/images/illustration-ai-content.webp"
-          alt="illustration to show ai content generation"
-        />
-      </div>
-
-      <div>
-        <h2>
-          <h2>Write your content using AI.</h2>
+      <div class="grid-container">
+        <div class="grid-item grid-item-1">
+          <h1>Social Media <span>10x</span> <span>Faster</span> with AI</h1>
           <img
-            src="./assets/images/illustration-create-post.webp"
-            alt="photo of a create post button with mouse cursor"
+            src="./assets/images/illustration-five-stars.webp"
+            alt="photo of 5 stars"
+            class="img img-star"
           />
-        </h2>
+          <p>Over 4,000 5-star reviews</p>
+        </div>
+
+        <div class="grid-item grid-item-2">
+          <img
+            src="./assets/images/illustration-multiple-platforms.webp"
+            alt="photo of instagram and twitter usernames"
+          />
+          <h3>Manage multiple accounts and platforms.</h3>
+        </div>
+
+        <div class="grid-item grid-item-3">
+          <h3>Maintain a consistent posting schedule.</h3>
+          <img
+            src="./assets/images/illustration-consistent-schedule.webp"
+            alt="illustration of calender"
+          />
+        </div>
+        <div class="grid-item grid-item-4">
+          <h3>Schedule to social media.</h3>
+          <img
+            src="./assets/images/illustration-schedule-posts.webp"
+            alt="illustration of schedule posts"
+          />
+          <p>
+            Optimize post timings to publish content at the perfect time for
+            your audience.
+          </p>
+        </div>
+
+        <div class="grid-item grid-item-5">
+          <img
+            src="./assets/images/illustration-grow-followers.webp"
+            alt="illustration of graphs to show followers growth"
+          />
+          <h2>Grow followers with non-stop content.</h2>
+        </div>
+
+        <div class="grid-item grid-item-6">
+          <h2>>56% faster audience growth</h2>
+          <img
+            src="./assets/images/illustration-audience-growth.webp"
+            alt="three emojis of user avatar"
+          />
+        </div>
+
+        <div class="grid-item grid-item-7">
+          <h2>Create and schedule content quicker.</h2>
+          <img
+            src="./assets/images/illustration-ai-content.webp"
+            alt="illustration to show ai content generation"
+          />
+        </div>
+
+        <div class="grid-item grid-item-8">
+          <h2>
+            <h2>Write your content using AI.</h2>
+            <img
+              src="./assets/images/illustration-create-post.webp"
+              alt="photo of a create post button with mouse cursor"
+            />
+          </h2>
+        </div>
       </div>
     </div>
   </body>
